style: fix scrollbar responsive issue in contact-list

--- a/src/app/pages/contacts/components/contacts-list/contacts-list.scss
+++ b/src/app/pages/contacts/components/contacts-list/contacts-list.scss
@@ -34,56 +34,6 @@
     height: 100%;
     border-right: none;
     box-shadow: none;
-
-    overflow: hidden;
-  }
-
-  &::-webkit-scrollbar {
-    width: 24px;
-  }
-
-  &::-webkit-scrollbar:horizontal {
-    height: 0px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--border-clr-light);
-    background-clip: padding-box;
-    border: 8px solid transparent;
-    border-radius: 11px;
-    min-height: 53px;
-
-    &:hover {
-      background-color: var(--text-color-light);
-    }
-  }
-
-  &::-webkit-scrollbar-button {
-    display: block;
-    height: 40px;
-    width: 24px;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: 8px 5px;
-    opacity: 1;
-
-    &:vertical:single-button:decrement {
-      background-image: url("data:image/svg+xml,%3Csvg%20width='8'%20height='5'%20viewBox='0%200%208%205'%20fill='none'%20xmlns='http://w3.org");
-      background-position: center;
-    }
-
-    &:vertical:single-button:increment {
-      background-image: url("data:image/svg+xml,%3Csvg%20width='8'%20height='5'%20viewBox='0%200%208%205'%20fill='none'%20xmlns='http://w3.org");
-      background-position: center;
-    }
-
-    @include respond-to(sm) {
-      display: none;
-    }
   }
 
   &__action-area {
@@ -150,7 +100,6 @@
     }
 
     @media (max-width: 610px) {
-      overflow-y: auto;
       padding-bottom: 120px;
     }
   }
